hphp/test/slow/dom_document/DOMDocument_saveHTMLFile_error2.php.expectf

Fatal error: Non-static method DOMDocument::saveHTMLFile() cannot be called statically in %s/DOMDocument_saveHTMLFile_error2.php on line 2
